/api/config のライブ m2ts 形式で無変換か判定できるように変更 #433
